src/css/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Roboto", serif, sans-serif;
  --fotter-background: rgb(89, 45, 210)!important;

}
body {
  text-align: center;
  background-color: var(--body-background)!important;
  
}
.root{
  --navbar-background: #d9d9d9;
  --body-background: #000000;
  --card-background: white;
  --bright-text: rgb(255, 255, 255);
  --grey-text: rgb(204, 204, 204);
  --btn-background: rgb(24, 28, 31);
  --btn-text: white;
  --form-background: rgb(0, 0, 0);
  --s-b-b: rgb(29, 71, 99);
  
  
}
.dark-mode{
  --navbar-background: #212121;
  --body-background: #1c1c1c;
  --card-background: #212529;
  --bright-text: rgb(255, 255, 255);
  --grey-text: rgb(204, 204, 204);
  --btn-background: rgb(26, 71, 122);
  --btn-text: #212529;
  --form-background: rgb(22, 22, 22);
  --search-btn-background: rgb(30, 163, 112);
  --fotter-background: #1b094d;


}
.overall_wrapper {
  display: flex;
  flex-direction: column;
  gap: 20px;
}
.nav-item{
  padding:0;
}
.header {
  padding: 60px;
  text-align: center;
  /* background: blue; */
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  color: black;
  font-size: 30px;
  /*toggle light/dark mode*/
  position:relative;
}

/*Nav Bar*/
.navbar-nav, .navbar-default, .container-fluid, .navbar-header, .navbar-wrap, .menu {
  width: 100%;
  margin: 0;
  padding: 0;
}

.navbar-nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  
}
.navbar2 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  background-color: var(--navbar-background);
}
.navbar2 a{
  color: grey;
  text-decoration: none;
}
.navbar2 a:hover{
  color: rgb(61, 61, 61);
  transition: 1s;
}
.navbar2 a:hover{
  transition: 1s;
}
.navbar2{
  background-color: var(--navbar-background);
}
/* Google maps */
#map-container-google-1 {
  width: 20vw;
}

#google-map {
  width: 100%;
  height: 100%;
}

/*Start toggle light/dark mode*/
.navbar.navbar-expand-sm{
  position: absolute;
  z-index:10;
  top:0;right:60px;
  font-size: 20px;
}
/*End toggle light/dark mode*/
/*form*/
#container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.mb-6 {
  margin-bottom: 20px;
}

.form-container {
  height: 37rem;
  width: 40rem;
}

/**/
.container {
  max-width: 100%;
  position: relative;
  z-index: 2;
  padding: 0;
}
.jumbotron {
  margin: 10px auto;
  background-size: cover;
  text-shadow: black 0.3em 0.3em 0.3em;
}
.navbar_wrapper {
  width: 100%;
}
.main_navbar {
  width: 100%;
}
.hamburger_menu_active {
  width: 100%;
  display: flex;
  justify-content: space-between;
  list-style-type: none;
  text-align: left;
  background-color: white;
  padding: 10px;
}
.hamburger_menu_active > li > a {
  padding: 5px;
  background-color: #dddddd;
  text-decoration: none;
}
/* Change the link color to #111 (black) on hover */
.hamburger_menu_active > li > a:hover {
  background-color: #111;
  color: orchid;
}
#hamburger_trigger {
  position: absolute;
  right: 0;
  font-size: 40px;
  display: none;
}

footer {
  display: inline-flex;
  background-color: gray;
  color: black;
  clear: both;
  height: 100px;
  font-family: "Roboto", sans-serif;
  width: 100%;
}

.fa-github {
  color: #171515;
}
.fa-linkedin-in {
  color: #0e76a8;
}

.fa-twitter{
  color: #00acee;
}

.fa-pinterest{
  color: #c8232c;
}

.fa-facebook {
  color: #1877f2;
}

.fa-instagram {
  color: #a6f218;
}
.fa-youtube {
  color: #f21818;
}

.svg-inline--fa:hover{
  color: #fff;
  transition: 1s;
}
.svg-inline--fa:not(:hover){
  transition: 2s;
}
section {
  display: flex;
  float: left;
  margin: 0 1.5%;
  width: 63%;
  padding: 5%;
  background: greenyellow;
}

aside {
  color: black;
  float: right;
  margin: 2%;
  width: 30%;
  background: gray;
  padding: 5%;
  box-shadow: inset 5px 0 5px -5px #29627e;
  padding-left: 0.5rem;
}

aside > p {
  margin: 0.5rem;
}

article {
  background: var(--card-background);
  padding: 5%;
}

.static-img {
  display: block;
}

iframe {
  max-width: 100%;
  background: orange;
}
i {
  width: 20px;
  height: 20px;
}

/* footer */
/* footer-top */
.footer-top{
  width: 100%;
  display: inline-flex;
  justify-content: space-between;
  background-color: var(--fotter-background);
  color: white;
}
#icon-title{
  padding: 10px 50px;
  gap: 20px;
}
#footer-icon {
  align-items: center;
  padding: 10px 50px;
  gap: 20px;
  display: flex;
}

#footer-icon a {
  color: white;
  padding-left: 20px;
}
/* footer-middle */
.footer-middle{
  display: flex;
  justify-content: space-evenly;
  padding: 40px 0;
  background-color: #1B2430;
  color: white;
  text-align: left;
  align-items: start;
  flex-wrap: wrap;
}
.footer-title{
  font-weight: 500;
  font-size: 18px;
  padding-bottom: 30px;
  color: black;
}
.contact-list, .link-list, .product-list, .company-list{
  font-size: 13px;
  text-align: left;
}
.hours-map, .company-product, .link-contact{
  display: flex;
  gap: 50px;
  justify-content: space-evenly;
}

footer ul , li{
  text-decoration: none;
  list-style-type: none;
  padding-bottom: 15px;
  padding-left: 0;
}

.footer-bottom{
  background-color: #0f151b;
  color: white;
  padding: 20px;
  margin: 0;
}
.imgLogo{
  width: 30%;
  height: 10%;
}
.btn-primary {
  margin-top: 1.5rem;
}
/* Medium Screens */

@media all and (max-width: 1000px) {
  #hamburger_trigger {
    display: block;
  }
  .hamburger_menu_active {
    flex-direction: column;
    align-items: center;
    gap: 20px;
    display: none;
  }
  .navbar-nav {
    flex-direction: column;
    justify-content: space-around;
    display: none;
  }
}

@media screen and (max-width: 576px){
  .header{
    height: 20%;
    padding: 0.2rem;
    font-size: 1rem;
  }
  .jumbotron h1{
    font-size: 1rem;
  }
}
@media all and (min-width: 34.375em) {
  .map-container {
    display: block;
  }

  .static-img {
    display: none;
  }
}

@media screen and (max-width: 768px) {
  .jumbotron {
    padding-top: 20px;
    padding-bottom: 20px;
  }
  /* footer */
  .footer-top{
    flex-direction: column;
  }
  #icon-title{
    width: 100%;
    text-align: left;
    padding: 15px;
  }
  #footer-icon{
    padding: 0 10px;
    gap: 7px;
  }
  .footer-middle{
    flex-direction: column;
  }
  .openhours, .company-name,.useful-link{
    width: 60%;
  }
  .company-product{
    gap: 10px;
  }
 .link-contact{
    gap: 100px;
    padding: 0 20px;
  }
}
.container3 section{
  background-color: var(--form-background);
  box-shadow:
  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
  0 12.5px 10px rgba(0, 0, 0, 0.06),
  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
  0 100px 80px rgba(0, 0, 0, 0.12)
;
}
.form-container option{
  color: grey;
}
.jumbotron h1,h2{
  text-shadow: none;
  color: white;
}
.header{
  background-image: radial-gradient( circle 610px at 5.2% 51.6%,  rgb(2, 3, 54) 0%, rgb(5, 2, 39) 97.5% ); 
  
}
.main_navbar a{
  color: grey;
  background-color: transparent;
  text-decoration: none;
}

.custom-control-label{
  color: white;
}
#navb a{
  background-color: var(--navbar-background);
}
#navb a:hover{
  background-color: rgb(212, 212, 212);
  transition: 1s;
  color: grey;
}
#navb a:not(:hover){
  transition: 1s;
}
#navb{
  box-shadow:
  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
  0 12.5px 10px rgba(0, 0, 0, 0.06),
  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
  0 100px 80px rgba(0, 0, 0, 0.12)
;
  background-color: var(--navbar-background);
}
#business-history{
  margin-left: 10px;
  margin-right: 10px;
}

.navbar2{
  height: 70px;
  
  box-shadow:
  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
  0 12.5px 10px rgba(0, 0, 0, 0.06),
  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
  0 100px 80px rgba(0, 0, 0, 0.12)
;
}
.s{
  position: absolute;
  top: 29vh;
  left: 90%;
  z-index: 100;
}
.dmlabel{
  position: absolute;
  top: 28.5vh;
  left: 91.5%;
  color: white;
}
.e{
  position: absolute;
  top: 60vh;
  left: 90%;
}
.dmlabele{
  position: absolute;
  top: 59.5vh;
  left: 91.5%;
  color: white;
}
.card{
  background-color: var(--card-background);
  box-shadow:
  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
  0 12.5px 10px rgba(0, 0, 0, 0.06),
  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
  0 100px 80px rgba(0, 0, 0, 0.12)
;
}
.footer-top{
  background: var(--fotter-background);
  box-shadow:
  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
  0 12.5px 10px rgba(0, 0, 0, 0.06),
  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
  0 100px 80px rgba(0, 0, 0, 0.12)
;
}
#head,#head2,.card-text{
  color: var(--bright-text);
}
.btn{
  background: var(--btn-background);
  color: var(--btn-text);
}
#bheader {
  color: var(--bright-text);
}
#business-history{
  color: var(--bright-text);
}
#head3{
  color: var(--bright-text);
}

.form-control{
  color: var(--bright-text);
  background-color: var(--form-background);
  border:  1px solid grey;
}
.form-control:focus{
  color: var(--bright-text);
  background-color: var(--form-background);
}
.jumbotron a{
  text-decoration: none;
  color: white;
  text-shadow: none;
}
#mhead{
  color: var(--bright-text);
}
#map-gog{
  height: 500px;
  width: 100%;
  margin-bottom: -55px;
}
#art p,h3{
  color: var(--bright-text);
}
#art{
  height: 363px;
  margin-right: 25px;
}
#s-btn{
  width: 85px;
  border: none;
  color: var(--bright-text) ;
  background-color: var(--s-b-b);
}
.footer-top{
  
  background-color: var(--fotter-background);
}
.card-body p{
  color: var(--bright-text);
}
.mainContent section{
  background-color: #dfb900;
}
#ba{
  background-color: var(--card-background);
}
#as{
  margin-top: -5px;
  margin-right: 25px;
  left: 25px;
  width: 454px;
  padding-left: 40px;
  padding-right: -10px;
}
#navbarSupportedContent li{
  display: inline-block;
  padding-left: 50px;
  margin-top: 15px;
}

